[tool.poetry]
name = "rlt-assignment"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"
packages = [{include = "rlt_assignment"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
pymongo = "^4.3.3"
black = "^23.3.0"
aiogram = "^2.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
